# Mediflow

./: .env.example  .gitignore  .opencode.config.json  AGENTS.md  Mediflow_handwritten_plan_analysis.md  Mediflow_handwritten_plan_analysis.md.docx  Mediflow_sop.md  Mediflow_sop.md.docx  README.md  architect_blueprint.md  brain.md  deploy-supabase.ps1  git_sync.bat  git_sync.ipynb  mediflow_sales_masterclass_playbook.md  meta_business_manager_guide.md  package-lock.json  package.json  playwright.config.ts  skills-lock.json  start_dev_server.bat  supabase_aws_backup_guide.md  vercel.json
.agent/: skill.md.txt
.agents/: AGENTS.md
Teach-team-main/: developer_guide_aesthetics_errors.md
backend/: .env.example  Dockerfile  README.md  railway.toml  requirements.txt
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: .env.example  .gitignore  debug_browser.cjs  e2e_pilot_validation.cjs  e2e_pilot_validation.js  eslint.config.js  index.html  package-lock.json  package.json  start-bridge.js  tailwind.config.js  test_cors.html  vite.config.ts
mobile/: app.json  package.json  tailwind.config.js
scratch/: abuse_db_repair.js  antigravity_diff.txt  antigravity_diff_utf8.txt  api_old.ts  api_old_utf8.ts  apply_all_rls_hardening.js  apply_auto_healer_upgrades.js  apply_harden_public_policies.js  apply_migrations.js  apply_patient_pod_migration.js  apply_phase2_migrations.js  apply_profiles_self_access_rls.js  (+151 more)
(+210 files in other folders)
